# MediaAdministrator

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: windows-build.yml
scripts/: check-versions.mjs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
