[package]
name = "media-administrator"
version = "0.3.14"
description = "Local media resource administrator"
authors = ["Media Administrator"]
edition = "2021"

[lib]
name = "media_administrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
regex = "1"
rusqlite = { version = "0.32", features = ["backup", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
walkdir = "2"
